--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,14 @@
   <meta charset="utf-8">
   <title>Crawsword</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <script src="https://kit.fontawesome.com/a964f0a110.js" crossorigin="anonymous"></script>
 </head>
 <body>
