dark mode complete

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
   <title>Crawsword</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="manifest" href="/site.webmanifest">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
 
   <script src="https://kit.fontawesome.com/a964f0a110.js" crossorigin="anonymous"></script>
 </head>
